bugfix : scrollbars appear => automated

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
 	justify-content: center;
 	align-items:center;
 	margin: 0 !important;
+	overflow:hidden
   }
   
   .main-wrapper {
@@ -20,7 +21,7 @@ body {
 	top: 50% !important;
 	left: 50% !important;
 	transform: translate(-50%, -50%) !important;
-	overflow: scroll;
+	overflow:auto;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -202,7 +203,7 @@ body {
 	height: auto !important;
 	max-height: 70%;
 	width: auto !important;
-	overflow:scroll;
+	overflow:auto;
 	display: flex !important;
 	justify-content: center;
 	align-items: center;
@@ -212,8 +213,4 @@ body {
 	transform: translate(-50%, -50%) !important;
 	z-index: 1000;
 	padding-top: 200px;
-  }
-
-  .mat-tab-group {
-	margin-bottom: 48px;
   }
